이미지 업로드 및 자잘한 수정사항들